--- a/web/lab1/index.html
+++ b/web/lab1/index.html
@@ -11,7 +11,7 @@
 <body>
 <section>
 <header>
-<span class="img"><img src="img.png"></span>
+<span class="img"><img src="img.png" alt="his examples are weird"></span>
 <h1>Numbers</h1>
 </header>
 <p>The most basic type of number is an <dfn>integer</dfn>, a <strong>series of digits</strong> wich can start with a <strong>plus or minus sign.</strong></p>
