--- a/web/lab1/index.html
+++ b/web/lab1/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+п»ї<!DOCTYPE html>
 <!-- Author: Andrey Lysenkov; -->
 <html>
 <head>
 	<meta charset="UTF-8">
-	<meta property="og:title" content="Лаба по вебу 1" />
-	<meta property="og:description" content="Лабораторная работа студента МГТУ им. Баумана по вебу" />
-	<title>Пробник</title>
+	<meta property="og:title" content="Р›Р°Р±Р° РїРѕ РІРµР±Сѓ 1" />
+	<meta property="og:description" content="Р›Р°Р±РѕСЂР°С‚РѕСЂРЅР°СЏ СЂР°Р±РѕС‚Р° СЃС‚СѓРґРµРЅС‚Р° РњР“РўРЈ РёРј. Р‘Р°СѓРјР°РЅР° РїРѕ РІРµР±Сѓ" />
+	<title>РџСЂРѕР±РЅРёРє</title>
 	<link href="style.css" rel="stylesheet">
 </head>
 <body>
@@ -14,7 +14,7 @@
 <span class="img"><img src="img.png" alt="his examples are weird"></span>
 <h1>Numbers</h1>
 </header>
-<p>The most basic type of number is an <dfn>integer</dfn>, a <strong>series of digits</strong> wich can start with a <strong>plus or minus sign.</strong></p>
+<p>The most basic type of number is an <dfn>integer</dfn>, a <strong>series of digits</strong> wich can start <span style="display: inline-block;">with a <strong>plus or minus sign.</strong></span></p>
 <p class="addition"><span class="digit">1</span> ,<span class="digit">23</span> ,and <span class="red">-</span><span class="digit">100000</span> are examples.</p>
 <p>Commas are not allowed in numbers, but underscores are. So if you feel the need to mark your thousands so the numbers are more readable, use an underscore.</p>
 <code class="addition"><var>population</var>  <span class="red">=</span> <span class="digit">12_000_000_000</span></code>
