--- a/web/lab2/index.html
+++ b/web/lab2/index.html
@@ -8,13 +8,14 @@
 	<meta property="og:url" content="http://lysenkov-ae.narod.ru/stud/bmstu_web/">
 	<meta property="og:site_name" content="Электронная библиотека Walpy">
 	<meta property="og:image" content="http://lysenkov-ae.narod.ru/stud/bmstu_web/og_logo.png">
+	<link href="style.css" rel="stylesheet">
 </head>
 <body>
 	<header>
 		<nav>
 			<ul>
 				<li>
-					<a href="index.html">Главная</a>
+					<a href="index.html"><img src="menu_main.png" alt="Главная"></a>
 				</li>
 				<li>
 					<a href="index.html">Главная</a>
