--- a/web/lab2/index.html
+++ b/web/lab2/index.html
@@ -12,22 +12,32 @@
 </head>
 <body>
 	<header>
+        <span class="logo"></span>
 		<nav>
-			<ul>
+			<ul class="menu">
 				<li>
-					<a href="index.html"><img src="menu_main.png" alt="Главная"></a>
+					<a href="index.html">На главную</a>
 				</li>
 				<li>
-					<a href="index.html">Главная</a>
+					<a href="books.html">Книги</a>
 				</li>
 				<li>
-					<a href="index.html">Главная</a>
+					<a href="authors.html">Авторы</a>
 				</li>
 				<li>
-					<a href="index.html">Главная</a>
+					<a href="index.html">Жанры</a>
 				</li>
 			</ul>
-		</nav>
+            <span class="search">
+                <div class="ya-site-form ya-site-form_inited_no" onclick="return {'action':'https://yandex.ru/search/site/','arrow':false,'bg':'transparent','fontsize':12,'fg':'#000000','language':'ru','logo':'rb','publicname':'Yandex Site Search #2248847','suggest':true,'target':'_blank','tld':'ru','type':2,'usebigdictionary':true,'searchid':2248847,'input_fg':'#000000','input_bg':'#ffffff','input_fontStyle':'normal','input_fontWeight':'normal','input_placeholder':'Поиск в Walpy библиотеке','input_placeholderColor':'#000000','input_borderColor':'#7f9db9'}"><form action="https://yandex.ru/search/site/" method="get" target="_blank"><input type="hidden" name="searchid" value="2248847"/><input type="hidden" name="l10n" value="ru"/><input type="hidden" name="reqenc" value=""/><input type="search" name="text" value=""/><input type="submit" value="Найти"/></form></div><style type="text/css">.ya-page_js_yes .ya-site-form_inited_no { display: none; }</style><script type="text/javascript">(function(w,d,c){var s=d.createElement('script'),h=d.getElementsByTagName('script')[0],e=d.documentElement;if((' '+e.className+' ').indexOf(' ya-page_js_yes ')===-1){e.className+=' ya-page_js_yes';}s.type='text/javascript';s.async=true;s.charset='utf-8';s.src=(d.location.protocol==='https:'?'https:':'http:')+'//site.yandex.net/v2.0/js/all.js';h.parentNode.insertBefore(s,h);(w[c]||(w[c]=[])).push(function(){Ya.Site.Form.init()})})(window,document,'yandex_site_callbacks');</script>
+            </span>
+        </nav>
 	</header>
+    <main>
+        
+    </main>
+    <footer>
+        Электронная библиотека Walpy. Walpy's e-library&trade;
+    </footer>
 </body>
 </html>
