it's killing me

--- a/web/lab2/index.html
+++ b/web/lab2/index.html
@@ -48,19 +48,29 @@
         </nav>
 	</header>
     <main>
-        <span class="block">
-            <span>Here I am!</span>
-            <article>Книга недели</article>
-        </span>
+       <section class="block">
+           <header>Новинки недели</header>
+            <article class="book">
+                <span class="img"><img src="book/b1.jpg"></span>
+                <header>Дом в котором...</header>
+                <footer>Автор: 	Мариам Петросян</footer>
+                <p>На окраине города, среди стандартных новостроек, стоит Се­рый Дом, в котором живут Сфинкс, Слепой, Лорд, Табаки, Македонский, Черный и многие другие. Неизвестно, действительно ли Лорд происходит из благородного рода драконов, но вот Слепой действительно слеп, а Сфинкс - мудр. Табаки, конечно, не шакал, хотя и любит поживиться чужим добром. Для каждого в Доме есть своя кличка, и один день в нем порой вмещает столько, сколько нам, в Наружности, не прожить и за целую жизнь. Каждого Дом прини­мает или отвергает. Дом хранит уйму тайн, и банальные скелеты в шкафах - лишь самый понятный угол того незримого мира, ку­да нет хода из Наружности, где перестают действовать привычные законы пространства-времени.</p>
+                <p>Дом - это нечто гораздо большее, чем интернат для детей, от которых отказались родители. Дом - это их отдельная вселенная.</p>
+            </article>
+            <article class="book"><span class="img"><img src="book/b1.jpg"></span>sdasda</article>
+            <article class="book"><span class="img"><img src="book/b1.jpg"></span>sdasdasd</article>
+       </section>
        <span class="block">
             <aside>новости</aside>
        </span>
     </main>
-    <footer>
+    <footer class="about">
+        <span class="footer_content">
         <p>Walpy's e-library&trade; by Andrey Lysenkov</p>
         <p>
             Электронная библиотека Волпай. Книги... Что может быть лучше хорошей книги, шелестящей своими старыми, полными мудрости страницами, затягивающими нас в свой мир. Разве что только их электронные копии, которые можно взять куда и сколько угодно, и читать на людом устрйстве. Шагните в новую эру цифровой эпохи без предрассудков бумажных книг, сделанных на остатках лесов нашей матушки Земли.
         </p>
+        </span>
     </footer>
 </body>
 </html>
